<?xml version="1.0"?>
<package format="3">
  <name>pal_fxt_kisbeadando</name>
  <version>0.0.1</version>
  <description>ROS 2 csomag egy focimeccs eseményeinek publikálására és megjelenítésére.</description>
  <maintainer email="aron.palfalva1@gmail.com">Aron Palfalvi</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
